# BrainScanAI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: GIT_WORKFLOW.md
notebooks/: 01_exploration_donnees.ipynb  02_preprocessing_extraction_features.ipynb
