[project]
name = "brainscanai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyarrow>=25.0.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.69.0",
]
